Bug 257412 - jsc_fuz/wktr: RELEASE_ASSERT(!isInTopLayer()); WebCore::Element::addToTopLayer() + 508 (Element.cpp:3849)
Summary: jsc_fuz/wktr: RELEASE_ASSERT(!isInTopLayer()); WebCore::Element::addToTopLaye...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Rob Buis
URL:
Keywords: InRadar
Depends on:
Blocks: 250171
  Show dependency treegraph
 
Reported: 2023-05-27 01:05 PDT by Tim Nguyen (:ntim)
Modified: 2023-06-05 19:11 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Nguyen (:ntim) 2023-05-27 01:05:44 PDT
Testcase:

```
<script>
  onload = () => {
    dialog0.showModal();
    dialog0.open = false;
    dialog0.showPopover();
  };
</script>
<dialog id="dialog0" popover=""></dialog>
```
Comment 1 Tim Nguyen (:ntim) 2023-05-27 01:06:02 PDT
rdar://109824133
Comment 2 Tim Nguyen (:ntim) 2023-05-27 01:10:59 PDT
Spec PR: https://github.com/whatwg/html/pull/9344
Comment 3 Rob Buis 2023-05-29 07:40:10 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14454
Comment 4 EWS 2023-06-05 14:35:24 PDT
Committed 264876@main (62bb3c714cc9): <https://commits.webkit.org/264876@main>

Reviewed commits have been landed. Closing PR #14454 and removing active labels.