[popover] Check for modal flag instead of open attribute https://bugs.webkit.org/show_bug.cgi?id=257412

Reviewed by Tim Nguyen.

Check for modal flag instead of open attribute in checkPopoverValidity check:
https://github.com/whatwg/html/pull/9344

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-top-layer-combinations.html:
* Source/WebCore/html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::show):
(WebCore::HTMLDialogElement::close):
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::checkPopoverValidity):

Canonical link: https://commits.webkit.org/264876@main